--- a/v0.1/myTeam.html
+++ b/v0.1/myTeam.html
@@ -16,6 +16,37 @@
           <div class="navbar-logo">
             <img src="img/logo.png">
           </div>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">      
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+              <a href="#/">Your Team</a>
+          </li>
+          <li>
+              <a href="#/league">League Table</a>
+          </li>
+          <li>
+              <a href="#/squads">Squads</a>
+          </li>
+          <!-- Add back in to allow draft round functionality. -->
+          <!-- <li>
+              <a href="#/draftRound">Draft Round</a>
+          </li> -->
+          <li>
+              <a href="#/draftResults">Draft Results</a>
+          </li>
+          <li>
+              <a href="#/transferWindow">Transfer Window</a>
+          </li>
+        </ul>
       </div>
     </nav>
 
