Changed main logo to not form part of the nav bar.

--- a/v0.1/index.html
+++ b/v0.1/index.html
@@ -9,15 +9,9 @@
   </head>
   <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-default" role="navigation" style="background-color: #FFFFFF;">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-          <div class="navbar-logo">
-            <img src="img/logo.png">
-          </div>
-      </div>
-    </nav>
+    <div class="main-logo">
+      <img src="img/logo.png">
+    </div>
 
     <div id="header">
       <div class="container">
