My team enchancements.

--- a/v0.1/index.html
+++ b/v0.1/index.html
@@ -22,7 +22,7 @@
               THE ONLY FANTASY GAME WHERE YOU REALLY ARE THE MANAGER
             </div>
 
-            <form class="form-horizontal" role="form">
+            <form class="form-horizontal" role="form" action="myTeam.html">
               <div class="row">
                 <div class="col-lg-8">
                   <div class="form-group">
