Mobile enhancements for My Team page.

--- a/v0.1/myTeam.html
+++ b/v0.1/myTeam.html
@@ -72,7 +72,7 @@
               </div>
               <div class="player">
                 <div>
-                  <img src="img/chelsea shirt.png">
+                  <img src="img/chelsea shirt.png" class="playerStrip">
                 </div>
                 <div class="playerName">
                   Thibot Courtois
@@ -107,7 +107,7 @@
               </div>
               <div class="player">
                 <div>
-                  <img src="img/everton shirt.png">
+                  <img src="img/everton shirt.png" class="playerStrip">
                 </div>
                 <div class="playerName">
                   Leighton Baines
@@ -115,7 +115,7 @@
               </div>
               <div class="player">
                 <div>
-                  <img src="img/Man City shirt.png">
+                  <img src="img/man city shirt.png" class="playerStrip">
                 </div>
                 <div class="playerName">
                   Pablo Zabaleta
@@ -123,7 +123,7 @@
               </div>
               <div class="player">
                 <div>
-                  <img src="img/spurs shirt.png">
+                  <img src="img/spurs shirt.png" class="playerStrip">
                 </div>
                 <div class="playerName">
                   Jan Vertonghan
@@ -142,7 +142,7 @@
             <div class="row positionRow" id="midfielders">
               <div class="player">
                 <div>
-                  <img src="img/Arsenal shirt.png">
+                  <img src="img/arsenal shirt.png" class="playerStrip">
                 </div>
                 <div class="playerName">
                   Theo Walcott
@@ -150,7 +150,7 @@
               </div>
               <div class="player">
                 <div>
-                  <img src="img/liverpool shirt.png">
+                  <img src="img/liverpool shirt.png" class="playerStrip">
                 </div>
                 <div class="playerName">
                   Jordan Henderson
@@ -166,7 +166,7 @@
               </div>
               <div class="player">
                 <div>
-                  <img src="img/liverpool shirt.png">
+                  <img src="img/liverpool shirt.png" class="playerStrip">
                 </div>
                 <div class="playerName">
                   Adam Lallana
@@ -174,7 +174,7 @@
               </div>
               <div class="player">
                 <div>
-                  <img src="img/man u shirt.png">
+                  <img src="img/man u shirt.png" class="playerStrip">
                 </div>
                 <div class="playerName">
                   Ander Herrera
@@ -193,7 +193,7 @@
               </div>
               <div class="player">
                 <div>
-                  <img src="img/liverpool shirt.png">
+                  <img src="img/liverpool shirt.png" class="playerStrip">
                 </div>
                 <div class="playerName">
                   Mario Balotelli
@@ -201,7 +201,7 @@
               </div>
               <div class="player">
                 <div>
-                  <img src="img/Man City shirt.png">
+                  <img src="img/man city shirt.png" class="playerStrip">
                 </div>
                 <div class="playerName">
                   Sergio Ageuro
@@ -209,7 +209,7 @@
               </div>
               <div class="player">
                 <div>
-                  <img src="img/everton shirt.png">
+                  <img src="img/everton shirt.png" class="playerStrip">
                 </div>
                 <div class="playerName">
                   Romelu Lukaku
@@ -236,7 +236,7 @@
 
           <div class="row subRow">
             <div>
-              <img src="img/spurs shirt.png">
+              <img src="img/spurs shirt.png" class="playerStrip">
             </div>
             <div class="playerName">
               Nacer Chadli
@@ -245,16 +245,16 @@
 
           <div class="row subRow">
             <div>
-              <img src="img/west brom shirt.png">
+              <img src="img/west brom shirt.png" class="playerStrip">
             </div>
             <div class="playerName">
-              Saido Berahino
+              Saido Berahi
             </div>
           </div>
 
           <div class="row subRow">
             <div>
-              <img src="img/arsenal shirt.png">
+              <img src="img/arsenal shirt.png" class="playerStrip">
             </div>
             <div class="playerName">
               Kieran Gibbs
@@ -263,7 +263,7 @@
 
           <div class="row subRow">
             <div>
-              <img src="img/swansea shirt.png">
+              <img src="img/swansea shirt.png" class="playerStrip">
             </div>
             <div class="playerName">
               Neil Taylor
@@ -272,7 +272,7 @@
 
           <div class="row subRow">
             <div>
-              <img src="img/chelsea shirt.png">
+              <img src="img/chelsea shirt.png" class="playerStrip">
             </div>
             <div class="playerName">
               Petr Cech
