Addition of league table.

--- a/v0.1/myTeam.html
+++ b/v0.1/myTeam.html
@@ -34,10 +34,10 @@
                   <a href="#/" class="selectedNavItem">Team Selection</a>
               </li>
               <li>
-                  <a href="#/league">Latest Points</a>
+                  <a href="#/latestPoints">Latest Points</a>
               </li>
               <li>
-                  <a href="#/squads">League Table</a>
+                  <a href="leagueTable.html">League Table</a>
               </li>
               <li>
                   <a href="#/draftResults">Transfer Centre</a>
