Changed league page to match the new white based style.

--- a/v0.1/leagueTable.html
+++ b/v0.1/leagueTable.html
@@ -46,84 +46,98 @@
       </div>
     </nav><!-- /.navbar-->
 
-    <div class="container" style="background-color: #000000;">
+    <div class="container" style="background-color: #FFFFFF;">
 
-      <table class="table table-bordered leagueTable">
+      <div class="row">
+        <div class="col-md-9 col-sm-9">
 
-        <tr class="leagueName">
-          <td colspan="4">Sunderland Lads Premiership</td>
-        </tr>
+          <table class="table leagueTable">
 
-        <tr class="leagueTableHeader">
-          <th class="leagueTableHeaderCell">Pos</th>
-          <th class="leagueTableHeaderCell">Team</th>
-          <th class="leagueTableHeaderCell">Week Score</th>
-          <th class="leagueTableHeaderCell">Total Score</th>
-        </tr>
+            <tr class="leagueName">
+              <td colspan="4">Sunderland Lads Premiership</td>
+            </tr>
 
-        <tr class="leagueTableTeam">
-          <td class="teamPosition">1</td>
-          <td>Hern FC</td>
-          <td>34</td>
-          <td>388</td>
-        </tr>
+            <tr class="leagueTableHeader">
+              <th class="leagueTableHeaderCell">Pos</th>
+              <th class="leagueTableHeaderCell">Team</th>
+              <th class="leagueTableHeaderCell">Week Score</th>
+              <th class="leagueTableHeaderCell">Total Score</th>
+            </tr>
 
-        <tr class="leagueTableTeam">
-          <td class="teamPosition">2</td>
-          <td>Jackson Jnr FC</td>
-          <td>19</td>
-          <td>385</td>
-        </tr>
+            <tr class="leagueTableTeam">
+              <td class="teamPosition">1</td>
+              <td>Hern FC</td>
+              <td>34</td>
+              <td>388</td>
+            </tr>
 
-        <tr class="leagueTableTeam">
-          <td class="teamPosition">3</td>
-          <td>Jackson Jnr FC</td>
-          <td>28</td>
-          <td>381</td>
-        </tr>
+            <tr class="leagueTableTeam">
+              <td class="teamPosition">2</td>
+              <td>Jackson Jnr FC</td>
+              <td>19</td>
+              <td>385</td>  
+            </tr>
 
-        <tr class="leagueTableTeam">
-          <td class="teamPosition">4</td>
-          <td>Clark FC</td>
-          <td>40</td>
-          <td>379</td>
-        </tr>
+            <tr class="leagueTableTeam">
+              <td class="teamPosition">3</td>
+              <td>Jackson Jnr FC</td>
+              <td>28</td>
+              <td>381</td>
+            </tr>
 
-        <tr class="leagueTableTeam">
-          <td class="teamPosition">5</td>
-          <td>Pearce FC</td>
-          <td>35</td>
-          <td>365</td>
-        </tr>
+            <tr class="leagueTableTeam">
+              <td class="teamPosition">4</td>
+              <td>Clark FC</td>
+              <td>40</td>
+              <td>379</td>
+            </tr>
 
-        <tr class="leagueTableTeam">
-          <td class="teamPosition">6</td>
-          <td>Hall FC</td>
-          <td>52</td>
-          <td>341</td>
-        </tr>
+            <tr class="leagueTableTeam">
+              <td class="teamPosition">5</td>
+              <td>Pearce FC</td>
+              <td>35</td>
+              <td>365</td>
+            </tr>
 
-        <tr class="leagueTableTeam">
-          <td class="teamPosition">7</td>
-          <td>Day FC</td>
-          <td>50</td>
-          <td>335</td>
-        </tr>
+            <tr class="leagueTableTeam">
+              <td class="teamPosition">6</td>
+              <td>Hall FC</td>
+              <td>52</td>
+              <td>341</td>
+            </tr>
 
-        <tr class="leagueTableTeam">
-          <td class="teamPosition">8</td>
-          <td>Garrity FC</td>
-          <td>31</td>
-          <td>324</td>
-        </tr>
+            <tr class="leagueTableTeam">
+              <td class="teamPosition">7</td>
+              <td>Day FC</td>
+              <td>50</td>
+              <td>335</td>
+            </tr>
 
-        <tr class="leagueTableTeam">
-          <td class="teamPosition">9</td>
-          <td>Carter FC</td>
-          <td>45</td>
-          <td>244</td>
-        </tr>        
-      </table>
+            <tr class="leagueTableTeam">
+              <td class="teamPosition">8</td>
+              <td>Garrity FC</td>
+              <td>31</td>
+              <td>324</td>
+            </tr>
+
+            <tr class="leagueTableTeam">
+              <td class="teamPosition">9</td>
+              <td>Carter FC</td>
+              <td>45</td>
+              <td>244</td>
+            </tr>        
+          </table>
+        </div> <!-- ./col -->
+
+        <div class="col-md-3 col-sm-3">
+
+          <a href='#'><img src="img/howToPlay.png" class="feature-photo"></a>
+          <a href='#'><img src="img/scoutingCentre.png" class="feature-photo"></a>
+          <a href='#'><img src="img/faqs.png" class="feature-photo"></a>
+
+        </div>
+
+      </div> <!-- ./row -->
       
     </div> <!-- /.container -->
 
