--- a/v0.1/myTeam.html
+++ b/v0.1/myTeam.html
@@ -308,7 +308,7 @@
           </div>
           
           <div class="subRow">
-            <a href='#'><img src="img/scoutingCentre.png" class="feature-photo"></a>
+            <a href='#'><img src="img/howToPlay.png" class="feature-photo"></a>
           </div>
           
           <div class="subRow">
@@ -316,7 +316,7 @@
           </div>
 
           <div class="subRow">
-            <a href='#'><img src="img/scoutingCentre.png" class="feature-photo"></a>
+            <a href='#'><img src="img/faqs.png" class="feature-photo"></a>
           </div>
         </div>
       </div> <!-- /.row -->
